--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,10 @@
     <string name="user_avatar">User Avatar</string>
     <string name="search">Find User</string>
     <string name="search_hint">Username</string>
+    <string name="tab_text_1">Followers</string>
+    <string name="tab_text_2">Following</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_avatar_dtl">User Avatar</string>
 </resources>
 
