Follow Unfollow Button Function Done
TODO : Implementing List User Followed inside Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,5 +125,6 @@
     <string name="user_avatar_dtl">User Avatar</string>
     <string name="change_theme">Change Theme</string>
     <string name="favorite_this_user">Add to Favorite</string>
+    <string name="favorites">Show Favorites</string>
 </resources>
 
